# dyn-dialect

./: .gitmodules  CMakeLists.txt  README.md  build.sh  setup.sh
.github/workflows/: clang-format.yml  test-and-build.yml
dialect-stats/: CMakeLists.txt  dialect-stats.cpp
dyn-opt/: CMakeLists.txt  GenEval.cpp  GenEval.h  IRDL2SSA.cpp  IRDL2SSA.h  LowerIRDL.cpp  LowerIRDL.h  MlirOptMain.cpp  MlirOptMain.h  RegisterIRDL.cpp  RegisterIRDL.h  dyn-opt.cpp
dyn-translate/: CMakeLists.txt  dyn-translate.cpp
extracted/: AMDGPU.td  AMX.td  AffineOps.td  AffineTransformOps.td  ArithOps.td  ArmNeon.td  ArmSVE.td  AsyncOps.td  BufferizationOps.td  BufferizationTransformOps.td  BuiltinOps.td  ComplexOps.td  ControlFlowOps.td  EmitC.td  FuncOps.td  GPUOps.td  GPUTransformOps.td  IRDLOps.td  IndexOps.td  LLVMIntrinsicOps.td  LLVMOps.td  LinalgMatchOps.td  LinalgOps.td  LinalgTransformOps.td  MLProgramOps.td  MathOps.td  MemRefOps.td  MemRefTransformOps.td  NVGPU.td  NVVMOps.td  PDLExtensionOps.td  PDLInterpOps.td  PDLOps.td  QuantOps.td  ROCDLOps.td  SCFOps.td  SCFTransformOps.td  SPIRVArithmeticOps.td  SPIRVBarrierOps.td  SPIRVCastOps.td  (+16 more)
include/: CMakeLists.txt
include/Dyn/: CMakeLists.txt  DynDialect.h  DynDialect.td  DynOps.h  DynOps.td  DynamicContext.h  DynamicDialect.h  DynamicID.h  DynamicInterface.h  DynamicObject.h  DynamicOperation.h  DynamicTrait.h  DynamicType.h  TypeIDAllocator.h
include/Dyn-c/: IR.h
lib/Dyn/: CMakeLists.txt  DynDialect.cpp  DynOps.cpp  DynamicContext.cpp  DynamicDialect.cpp  DynamicInterface.cpp  DynamicObject.cpp  DynamicOperation.cpp  DynamicType.cpp
tblgen-extract/: CMakeLists.txt  extract-all.py  tblgen-extract.cpp
tblgen-stats/: CMakeLists.txt  OpGenHelpers.cpp  OpGenHelpers.h  json.h  tblgen-stats.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dyn/: cmath.irdl  dummy.mlir  dyn-opt.mlir  dyn-translate.mlir  irdl.mlir  pass.c  (+13 more)
utils/: build-llvm.sh  build.sh  check-mlir.sh  setup.sh  tblgen-stats.py
(+86 files in other folders)
